# Copyright (c) 2020 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools/client_server:client_server_test.bzl",
    "client_server_test",
)

genrule(
    name = "sdk-1.0.0",
    outs = ["sdk-1.0.0.dar"],
    cmd = """
DIR=$$(mktemp -d)
trap "{ rm -rf $$DIR; }" EXIT
cat <<EOF > $$DIR/daml.yaml
sdk-version: 1.0.0
name: foobar
version: 0.0.1
source: .
dependencies: [daml-stdlib, daml-prim]
EOF
$(location @daml-sdk-1.0.0//:sdk/bin/daml) build --project-root $$DIR -o $$PWD/$(location :sdk-1.0.0.dar)
""",
    tools = ["@daml-sdk-1.0.0//:sdk/bin/daml"],
)

genrule(
    name = "sdk-1.0.1-snapshot.20200417.3908.1.722bac90",
    outs = ["sdk-1.0.1-snapshot.20200417.3908.1.722bac90.dar"],
    cmd = """
DIR=$$(mktemp -d)
trap "{ rm -rf $$DIR; }" EXIT
cat <<EOF > $$DIR/daml.yaml
sdk-version: 1.0.1-snapshot.20200417.3908.1.722bac90
name: foobar
version: 0.0.1
source: .
dependencies: [daml-stdlib, daml-prim]
EOF
$(location @daml-sdk-1.0.1-snapshot.20200417.3908.1.722bac90//:sdk/bin/daml) build --project-root $$DIR -o $$PWD/$(location :sdk-1.0.1-snapshot.20200417.3908.1.722bac90.dar)
""",
    tools = ["@daml-sdk-1.0.1-snapshot.20200417.3908.1.722bac90//:sdk/bin/daml"],
)

client_server_test(
    name = "test",
    client = "@daml-sdk-1.0.1-snapshot.20200417.3908.1.722bac90//:ledger-api-test-tool",
    client_args = [
        "localhost:6865",
        "--open-world",
        "--exclude=ClosedWorldIT",
    ],
    data = ["@daml-sdk-1.0.1-snapshot.20200417.3908.1.722bac90//:dar-files"],
    runner = "@//bazel_tools/client_server/runner_with_port_check:runner",
    runner_args = ["6865"],
    server = "@daml-sdk-1.0.0//:daml",
    server_args = ["sandbox"],
    server_files = ["$(rootpaths @daml-sdk-1.0.1-snapshot.20200417.3908.1.722bac90//:dar-files)"],
    tags = ["exclusive"],
)
