load(
    "//bazel_tools:scala.bzl",
    "da_scala_binary",
    "da_scala_library",
    "da_scala_test",
)

da_scala_library(
  name = "hello-world",
  srcs = glob(["src/main/scala/**/*.scala"]),
  deps = [],
)

da_scala_binary(
    name = "hello-world-exe",
    main_class = "com.daml.main.HelloWorld",
    tags = [],
    visibility = ["//visibility:public"],
    deps = [":hello-world"],
)
